# passgen_flutter_rust

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/passgen/: MainActivity.kt
backend/: Cargo.toml
backend/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: backend.dart  bridge_definitions.dart  bridge_generated.dart  main.dart
lib/widgets/: number_input.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
web/: index.html
windows/: CMakeLists.txt  rust.cmake
windows/runner/: Runner.rc  main.cpp
