[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[profile.release]
# opt-level = "s"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
flutter_rust_bridge = "1.78.0"
rand = "0.8.5"
